# AFL

./: .gitignore  .travis.yml  Android.bp  CMakeLists.txt  Makefile  README.md  afl-analyze.c  afl-as.c  afl-fuzz.c  afl-gotcpu.c  afl-showmap.c  afl-tmin.c  afl-whatsup  android-ashmem.h  config.h  coverage-32.h  coverage-64.h  debug.h  hash.h  test-instr-libfuzzer.c  test-instr.c  test-libfuzzer-target.c  types.h
.travis/: check_fuzzer_stats.sh
cmake/: options.cmake  packaging.cmake  utils.cmake
dictionaries/: regexp.dict
docs/: ChangeLog  INSTALL.rst  README.md  about_afl.rst  conf.py  fuzzing.rst  index.rst  instrumenting.rst  limitations.rst  motivation.rst  notes_for_asan.rst  quick_start.rst  related_projects.rst  status_screen.txt  technical_details.txt  tips.rst  user_guide.rst
experimental/argv_fuzzing/: argv-fuzz-inl.h  test.c  test.txt
experimental/asan_cgroups/: limit_memory.sh
experimental/canvas_harness/: canvas_harness.html
experimental/clang_asm_normalize/: as
experimental/crash_triage/: triage_crashes.sh
experimental/distributed_fuzzing/: sync_script.sh
experimental/persistent_demo/: persistent_demo.c
experimental/post_library/: post_library.so.c  post_library_png.so.c
libdislocator/: Makefile  libdislocator.so.c
libtokencap/: Makefile  libtokencap.so.c
llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-pass.so.cc  afl-llvm-rt.o.c
qemu_mode/: build_qemu_support.sh
qemu_mode/patches/: afl-qemu-cpu-inl.h  afl-qemu-inst.h  capstone.diff  configure.diff  cpu-exec.diff  gen-icount.diff  memfd.diff  syscall.diff  tcg-runtime.diff
testcases/others/regex/: reg3
testcases/others/regexp/: reg1  reg2  reg4
